@@ -5,9 +5,9 @@ dependencies[] = plupload
 package = Fields
 core = 7.x
 
-; Information added by drupal.org packaging script on 2012-09-14
-version = "7.x-1.0"
+; Information added by drupal.org packaging script on 2013-08-27
+version = "7.x-1.1"
 core = "7.x"
 project = "filefield_sources_plupload"
-datestamp = "1347619075"
+datestamp = "1377635510"
 
