@@ -32,22 +32,11 @@ function filefield_sources_plupload_source_process($element, $form_state, $form)
   // larger than PHP limit, since Plupload transfers using 1mb chunks.
   $max_filesize = !empty($instance['settings']['max_filesize']) ? parse_size($instance['settings']['max_filesize']) : parse_size(file_upload_max_size());
 
-  if ($field['cardinality'] == 1) {
-    $element['filefield_plupload'] = array(
-      '#weight' => 100.5,
-      '#markup' => '<p>' . t('This upload type can not be used on single value fields.') . '</p>',
-      // Required for proper theming.
-      '#filefield_source' => TRUE,
-      '#prefix' => '<div class="filefield-source filefield-source-plupload clear-block">',
-      '#suffix' => '</div>',
-    );
-  }
-  else {
     $element['filefield_plupload'] = array(
       '#weight' => 100.5,
       // Required for proper theming.
       '#filefield_source' => TRUE,
-      '#prefix' => '<div class="filefield-source filefield-source-plupload clear-block">',
+      '#prefix' => '<div class="filefield-source filefield-source-plupload clearfix">',
       '#suffix' => '</div>',
     );
     $element['filefield_plupload']['pud'] = array(
@@ -57,6 +46,7 @@ function filefield_sources_plupload_source_process($element, $form_state, $form)
       // client side validation as well as proper file munging during upload.
       '#upload_validators' => $element['#upload_validators'],
       '#plupload_settings' => array(
+          'cardinality' => $field['cardinality'],
           'max_file_size' => $max_filesize,
           'chunk_size' => '1mb',
           'runtimes' => 'html5,flash,silverlight,html4',
@@ -65,12 +55,22 @@ function filefield_sources_plupload_source_process($element, $form_state, $form)
       '#value_callback' => 'filefield_sources_plupload_element_value',
       '#process' => array('filefield_sources_plupload_element_process'),
     );
+    if ($field['cardinality'] == 1) {
+      $element['filefield_plupload']['pud']['#plupload_settings'] += array(
+        'multi_selection' => FALSE,
+        'multiple_queues' => FALSE,
+      );
+      $element['filefield_plupload']['pud']['#title'] = t("Select one file to upload");
+    }elseif($field['cardinality'] != -1){
+      $element['filefield_plupload']['pud']['#title'] = t("Select up to @cardinality files to upload", array('@cardinality' => $field['cardinality']));
+    }
+
     $element['filefield_plupload']['upload_button'] = array(
       '#name' => implode('_', $element['#array_parents']) . '_transfer',
       '#type' => 'submit',
       '#value' => t('Start upload'),
       '#validate' => array(),
-      '#submit' => array('filefield_sources_plupload_submit'),
+      '#submit' => array('filefield_sources_field_submit'),
       '#limit_validation_errors' => array($element['#parents']),
       '#ajax' => array(
         'path' => 'file/ajax/' . implode('/', $element['#array_parents']) . '/' . $form['form_build_id']['#value'],
@@ -80,7 +80,6 @@ function filefield_sources_plupload_source_process($element, $form_state, $form)
         'event' => 'pud_update',
       ),
     );
-  }
 
   return $element;
 }
@@ -147,6 +146,7 @@ function filefield_sources_plupload_element_value($element, $input = FALSE, &$fo
       $temp_filepath = file_unmanaged_move($source, $temp_destination, FILE_EXISTS_REPLACE);
       // Save the files to their final destination.
       if ($file = filefield_sources_save_file($temp_filepath, $upload_validators, $upload_location)) {
+        file_unmanaged_delete($temp_filepath);
         $saved_files[] = $file;
       }
     }
@@ -180,48 +180,4 @@ function filefield_sources_plupload_element_value($element, $input = FALSE, &$fo
   field_form_set_state($field_element['#field_parents'], $field_name, $langcode, $form_state, $field_state);
 
   return $pud_value;
-}
-
-/**
- * We need our own submit handler until the following issue gets resolved:
- * http://drupal.org/node/1329056
- *
- */
-function filefield_sources_plupload_submit(&$form, &$form_state) {
-
-  $parents = array_slice($form_state['triggering_element']['#array_parents'], 0, -3);
-  $element = drupal_array_get_nested_value($form, $parents);
-  $field_name = $element['#field_name'];
-  $langcode = $element['#language'];
-
-  // Get existing file values.
-  // File Field items are stored in the field state after ajax reloads starting
-  // from Drupal 7.9. We try to support all releases by merging the items.
-  $field_state = field_form_get_state($element['#field_parents'], $field_name, $langcode, $form_state);
-  $field_values = drupal_array_get_nested_value($form_state['values'], $parents);
-
-  if (isset($field_values) && isset($field_state['items'])) {
-    $field_values += $field_state['items'];
-  }
-  elseif (isset($field_state['items'])) {
-    $field_values = $field_state['items'];
-  }
-
-  if (isset($field_values)) {
-    // Update sort order according to weight. Note that this is always stored in
-    // form state. Sorts done before ajax reloads does not work using regular
-    // upload, but that is a core bug.
-    usort($field_values, '_field_sort_items_helper');
-
-    // Update form_state values.
-    drupal_array_set_nested_value($form_state['values'], $parents, $field_values);
-
-    // Update items.
-    $field_state['items'] = $field_values;
-    field_form_set_state($element['#field_parents'], $field_name, $langcode, $form_state, $field_state);
-  }
-
-  // Clear out input as it will need to be rebuildt.
-  drupal_array_set_nested_value($form_state['input'], $element['#parents'], NULL);
-  $form_state['rebuild'] = TRUE;
 }
