@@ -23,14 +23,39 @@ Drupal.behaviors.filefield_sources_plupload = {
       // While we are at it, hide the redundant file validation help
       $(this).closest('.filefield-source-plupload').find('div.description').hide();
 
+      // Add button.
+      var add_button = $(this).find('.plupload_button.plupload_add');
+
       // Intercept the submit to start uploading and ensure all files are done
       // uploading before triggering the ajax form update.
-      var $submit = $(this).closest('.filefield-source-plupload').find('input.form-submit');
+      var $submit = $(this).closest('.filefield-source-plupload').find('.form-submit');
+
+      var uploader_element = $(this).closest('.filefield-source-plupload').find('.plupload-element');
+      var uploader = uploader_element.pluploadQueue();
+      // Refresh for IE8
+      uploader.refresh();
+
+      uploader.bind('QueueChanged', function() {
+        // If cardinality is NOT unlimited.
+        if (pluploadSettings.cardinality > 0) {
+          // Remove files exceeding the cardinality setting.
+          if (uploader.files.length >= pluploadSettings.cardinality) {
+            var i = 0;
+            for (i=0;i<uploader.files.length;i++) {
+              if (i >= pluploadSettings.cardinality) {
+                uploader.removeFile(uploader.files[i]);
+              }
+            }
+            add_button.hide();
+          }
+          else {
+            add_button.show();
+          }
+        }
+      });
 
       $submit.bind('click', function(e) {
         e.preventDefault();
-        var uploader_element = $(this).closest('.filefield-source-plupload').find('.plupload-element');
-        var uploader = uploader_element.pluploadQueue();
 
         uploader.bind('StateChanged', function() {
           if (uploader.total.uploaded == uploader.files.length) {
