@@ -1,6 +1,17 @@
 filefield_sources_plupload 7.x-1.x, , xxxx-xx-xx
 -------------------------------------------------
 
+filefield_sources_plupload 7.x-1.x, , 2013-08-23
+-------------------------------------------------
+- Made submit-button form selector less spesific to support button (removed input from selector)
+- Removed cusom submit-handler, now using filefield_sources' updated handler (same code)
+
+filefield_sources_plupload 7.x-1.x, , 2013-08-22
+-------------------------------------------------
+- #1549848 by Osman: Added support for single file uploads and better cardinality check.
+- #1920174 by JacekK: Removes temporary files after copy.
+- Better support for Flash and Silverlight in IE8
+
 filefield_sources_plupload 7.x-1.x, , 2012-09-14
 -------------------------------------------------
 - Added support for Silverlight
